--- a/zombie.html
+++ b/zombie.html
@@ -7,6 +7,10 @@
     <title>Zombie Cet Hunter</title>
 </head>
 <body>
-    
+    <div class="rowContainer" id="row1"></div>
+    <div class="rowContainer" id="row2"></div>
+    <div class="rowContainer" id="row3"></div>
+    <div class="rowContainer" id="row4"></div>
+    <div class="rowContainer" id="row5"></div>
 </body>
 </html>
