--- a/zombie.html
+++ b/zombie.html
@@ -7,10 +7,13 @@
     <title>Zombie Cet Hunter</title>
 </head>
 <body>
-    <div class="rowContainer" id="row1"></div>
-    <div class="rowContainer" id="row2"></div>
-    <div class="rowContainer" id="row3"></div>
-    <div class="rowContainer" id="row4"></div>
-    <div class="rowContainer" id="row5"></div>
+
+    <div class="rowContainer" id="container">
+        <h1 id="score">Score: 0</h1>
+
+        <button type="button" id="end">End Game</button>
+    </div>
+
+    <script src="game.js"></script>
 </body>
 </html>
