added animation to zombies

--- a/zombie.html
+++ b/zombie.html
@@ -8,12 +8,11 @@
 </head>
 <body>
 
-    <div class="rowContainer" id="container">
+    <div class="menu" id="menu">
         <h1 id="score">Score: 0</h1>
-
+        <div class="gameContainer" id="gameContainer"></div>
         <button type="button" id="end">End Game</button>
     </div>
-
     <script src="game.js"></script>
 </body>
 </html>
