--- a/zombie.html
+++ b/zombie.html
@@ -9,7 +9,10 @@
 <body>
 
     <div class="menu" id="menu">
-        <h1 id="score">Score: 0</h1>
+        <div id="scoreBoard">
+            <h1 id="score">Score: 0</h1>
+            <h1 id="time">Time: 0</h1>
+        </div>
         <div class="gameContainer" id="gameContainer"></div>
         <button type="button" id="end">End Game</button>
     </div>
