--- a/zombie.html
+++ b/zombie.html
@@ -8,13 +8,8 @@
 </head>
 <body>
 
-    <div class="menu" id="menu">
-        <div id="scoreBoard">
-            <h1 id="score">Score: 0</h1>
-            <h1 id="time">Time: 0</h1>
-        </div>
-        <div class="gameContainer" id="gameContainer"></div>
-        <button type="button" id="end">End Game</button>
+    <div id="menu">
+        <div id="startScreen"></div>
     </div>
     <script src="game.js"></script>
 </body>
