changed directory of files

--- a/zombie/zombie.html
+++ b/zombie/zombie.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="zombieStyle.css">
     <title>Zombie Cet Hunter</title>
 </head>
-<body>
+<body id="browser">
 
     <div id="menu">
         <div id="startScreen"></div>
