--- a/zombie/index.html
+++ b/zombie/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="zombieStyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Zombie Cet Hunter</title>
 </head>
 <body id="browser">
@@ -11,6 +11,6 @@
     <div id="menu">
         <div id="startScreen"></div>
     </div>
-    <script src="game.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
