changed index.html of root page

--- a/index.html
+++ b/index.html
@@ -49,14 +49,10 @@
     <body>
         <h1 style="font-family: Arial, Helvetica, sans-serif;">Ryan Leung</h1>
         <p style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> 
-            My name is Ryan, I go to BCIT and currently enrolled in CST. <br>
-            I like video games, card games, and board games. <br>
-            Every game has an optimal way of playing it, finding that algorithm is my goal. <br>
-            I like to develop software. <br>
-            I like to go to the gym.
+            To play a zombie clicker game, click on the picture below.
         </p>
 
-        <a href="card.html">
+        <a href="zombie/index.html">
             <img src="images/ryan.JPG", alt="Ryan's Picture"> 
         </a>
 
