--- a/assignments/lab8/index.html
+++ b/assignments/lab8/index.html
@@ -6,7 +6,7 @@
     <title>Lab 8</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id="main">
     <script src="app.js"></script>
 </body>
 </html>
